@@ -156,6 +156,15 @@ class MailgwTestAbstractBase(unittest.TestCase, DiffHelper):
             os.remove(SENDMAILDEBUG)
         self.db.close()
 
+    def _allowAnonymousSubmit(self):
+        p = [
+            self.db.security.getPermission('Register', 'user'),
+            self.db.security.getPermission('Email Access', None),
+            self.db.security.getPermission('Create', 'issue'),
+            self.db.security.getPermission('Create', 'msg'),
+        ]
+        self.db.security.role['anonymous'].permissions = p
+
     def _create_mailgw(self, message, args=()):
         class MailGW(self.instance.MailGW):
             def handle_message(self, message):
@@ -1924,13 +1933,7 @@ Subject: [issue] Testing...
 
 This is a test submission of a new issue.
 '''
-        p = [
-            self.db.security.getPermission('Register', 'user'),
-            self.db.security.getPermission('Email Access', None),
-            self.db.security.getPermission('Create', 'issue'),
-            self.db.security.getPermission('Create', 'msg'),
-        ]
-        self.db.security.role['anonymous'].permissions = p
+        self._allowAnonymousSubmit()
         self._handle_mail(message)
         m = set(self.db.user.list())
         new = list(m - l)[0]
@@ -1951,13 +1954,7 @@ Subject: [issue] Test =?utf-8?b?w4TDlsOc?= umlauts
 
 This is a test submission of a new issue.
 '''
-        p = [
-            self.db.security.getPermission('Register', 'user'),
-            self.db.security.getPermission('Email Access', None),
-            self.db.security.getPermission('Create', 'issue'),
-            self.db.security.getPermission('Create', 'msg'),
-        ]
-        self.db.security.role['anonymous'].permissions = p
+        self._allowAnonymousSubmit()
         self._handle_mail(message)
         title = self.db.issue.get('1', 'title')
         self.assertEquals(title, 'Test \xc3\x84\xc3\x96\xc3\x9c umlauts X1 X2')
@@ -1965,6 +1962,29 @@ This is a test submission of a new issue.
         new = list(m - l)[0]
         name = self.db.user.get(new, 'realname')
         self.assertEquals(name, 'Firstname \xc3\xa4\xc3\xb6\xc3\x9f Last')
+
+    def testNewUserAuthorMixedEncodedNameSpacing(self):
+        l = set(self.db.user.list())
+        # From: name has Euro symbol in it
+        message = '''Content-Type: text/plain;
+  charset="iso-8859-1"
+From: (=?utf-8?b?w6TDtsOf?==?utf-8?b?w6TDtsOf?=) <fubar@bork.bork.bork>
+To: issue_tracker@your.tracker.email.domain.example
+Message-Id: <dummy_test_message_id>
+Subject: [issue] Test (=?utf-8?b?w4TDlsOc?=) umlauts
+ X1
+
+This is a test submission of a new issue.
+'''
+        self._allowAnonymousSubmit()
+        self._handle_mail(message)
+        title = self.db.issue.get('1', 'title')
+        self.assertEquals(title, 'Test (\xc3\x84\xc3\x96\xc3\x9c) umlauts X1')
+        m = set(self.db.user.list())
+        new = list(m - l)[0]
+        name = self.db.user.get(new, 'realname')
+        self.assertEquals(name,
+            '(\xc3\xa4\xc3\xb6\xc3\x9f\xc3\xa4\xc3\xb6\xc3\x9f)')
 
     def testUnknownUser(self):
         l = set(self.db.user.list())
